Bug 440500 - Stock wizard shows online source that no longer exist
Summary: Stock wizard shows online source that no longer exist
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-01 14:42 UTC by antoine
Modified: 2021-08-07 09:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments
demo (563.99 KB, image/gif)
2021-08-01 14:42 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2021-08-01 14:42:26 UTC
Created attachment 140447 [details]
demo

SUMMARY


STEPS TO REPRODUCE
1. edit an online source
2. edit a stock
3. 

OBSERVED RESULT

the combobox does not contain the right list of online source

EXPECTED RESULT


SOFTWARE/OS VERSIONS
xubuntu 20.04

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2021-08-02 20:01:42 UTC
Git commit a66d285f857edaf327fb275ab292d81a3a5a8848 by Thomas Baumgart.
Committed on 02/08/2021 at 20:01.
Pushed by tbaumgart into branch '5.1'.

Fix renaming and deleting quote sources

I don't fix this in master for now because of the current GSoC project
which replaces the webpricequote system with the one from Alkimia.
FIXED-IN: 5.1.3

M  +5    -1    kmymoney/converter/webpricequote.cpp
M  +46   -23   kmymoney/dialogs/settings/ksettingsonlinequotes.cpp

https://invent.kde.org/office/kmymoney/commit/a66d285f857edaf327fb275ab292d81a3a5a8848