Fix renaming and deleting quote sources

I don't fix this in master for now because of the current GSoC project
which replaces the webpricequote system with the one from Alkimia.

BUG: 440500
FIXED-IN: 5.1.3